# workshop_ao_vivo_airflow

./: exemplo_00.py  exemplo_01.py  pyproject.toml
frontend/: exemplo_04.py
