[tool.poetry]
name = "workshop-ao-vivo-airflow"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
streamlit = "^1.32.2"
pandas = "^2.2.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
